--- a/assets/html/events.html
+++ b/assets/html/events.html
@@ -130,7 +130,7 @@
                 <div class="col-8">
                     <div class="my-3 p-3 bg-body rounded shadow-lg">
                         <h2 class="border-bottom pb-2 mb-3" >Eventi</h2>
-                        <button type="button" class="btn btn-primary btn-lg">Aggiungi evento</button>
+                        <a href="add-event.html" class="btn btn-primary btn-lg">Aggiungi evento</a>
                         <button class="btn btn-outline-success btn-lg" type="submit">Cerca evento</button>
                     </div>
                 </div>
